# libdbusmenu-qt

./: .kateproject  CMakeLists.txt  Doxyfile.in  dbusmenu-qt.pc.in
.github/workflows/: codeql-analysis.yml
debian/: changelog  control  libdbusmenu-katie-dev.install  libdbusmenu-katie-doc.install  libdbusmenu-katie.install  rules
src/: CMakeLists.txt  dbusmenu_export.h  dbusmenu_p.cpp  dbusmenu_p.h  dbusmenuexporter.cpp  dbusmenuexporter.h  dbusmenuexporterdbus_p.cpp  dbusmenuexporterdbus_p.h  dbusmenuexporterprivate_p.h  dbusmenuimporter.cpp  dbusmenuimporter.h  dbusmenushortcut_p.h  dbusmenutypes_p.cpp  dbusmenutypes_p.h  debug_p.h  utils_p.h
tests/: CMakeLists.txt  dbusmenuexportertest.cpp  dbusmenuexportertest.h  dbusmenuimportertest.cpp  dbusmenuimportertest.h  dbusmenushortcuttest.cpp  dbusmenushortcuttest.h  slowmenu.cpp  testutils.cpp
tests/testapp/: CMakeLists.txt
tools/testapp/: CMakeLists.txt  main.cpp
